@@ -1,3 +1,7 @@
+2004-02-03  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scripts/filter-lilypond-book.py: Handle @lilypondfile, bugfixes.
+
 2004-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/filter-lilypond-book.py: Handle verbatim, latex
